# airflow_with_redshift

./: .gitignore  database.py  main.py  pyproject.toml
pipeline/: configuration.py
