[tool.poetry]
name = "airflow_with_redshift"
version = "0.1.0"
description = "pipeline using airflow and redshift"
authors = ["rich <hadfield.richard@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
boto3 = "^1.14.56"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
